syntax = "proto2";

message Column
{
	optional string colName=1;
	optional string colValue=2;
	optional string colType=3;//added
}

message ColumnFamily
{
	optional string Name=1;
	repeated Column columns=2;
}

message CreateTableRequest
{
  	optional string tableName = 1;
  	repeated ColumnFamily colFamilies=2;   
}

message CreateTableResponse
{
	optional int32 status=1;
}

//When Region Server/Master receives create request. It will create a file with the table name and store the table metadata (columns) in the file.

message Cell
{
	optional ColumnFamily colFamily=1;
	optional int64 timestamp=2;
}

message PutRequest
{
	optional string TableName=1;
	optional string rowkey=2;   // Populated by client
	repeated Cell cells=3;
}



message PutResponse
{
   optional string Status=1;
}


message GetRequest
{
	optional string tableName=1;
	optional string rowkey=2;
	repeated ColumnFamily colFamily=3;
}

message GetResponse
{
	optional int32 Status=1;
	repeated Cell cells=2;
}

message Row
{
	optional int32 rowID = 1; // else our rabdi will cry :D and her instinct thingy
	repeated Cell cells=2; 
}

message IndexEntry
{
	optional string rowID = 1; // row ID
	optional int32 startByte = 2; // start byte in the file
}

message IndexList
{
	repeated IndexEntry index = 1;
}

